# itmo-fp-2020

./: .gitignore  .hlint.yaml  Poli.hs  README.md  stack.yaml
hw0/: LICENSE  README.md  hw1.cabal
hw0/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs
hw1/: README.md  hw1.cabal
hw1-second-chance/: README.md  hw1-second-chance.cabal
hw1-second-chance/src/: Block6.hs
hw1-second-chance/test/: Block6Tests.hs  Spec.hs
hw1/src/: Block1.hs  Block2.hs  Block3.hs  Block4.hs  Block5.hs  Lib.hs  Tree.hs
hw1/test/: Block1Tests.hs  Block2Tests.hs  Block3Tests.hs  Block4Tests.hs  Block5Tests.hs  Block6Tests.hs  Spec.hs
hw2/: README.md  hw2.cabal
hw2/TEST_DIR/timeDir/BigHouse/flat1/.VCS_Flat.txt/4/: Flat.txt  commit
hw2/TEST_DIR/timeDir/BigHouse/flat1/.VCS_Flat.txt/5/: commit
hw2/TEST_DIR/timeDir/BigHouse/flat1/.VCS_Flat.txt/6/: commit
hw2/TEST_DIR/timeDir/BigHouse/flat2/: Flat.txt
hw2/src/: Directory.hs  File.hs  Main.hs  MyExamples.hs  Parser.hs  WorkingEnvironment.hs
hw2/timeDir/BigHouse/: HouseHolder.txt
hw3/: README.md  hw3.cabal
hw3/src/: Task1.hs  Task2.hs  Task3.hs  Task5.hs  Task6.hs  Task7.hs  Task8.hs  Task8Extension.hs
hw3/test/: Spec.hs  Task1Tests.hs  Task2Tests.hs  Task3Tests.hs
hw4/: README.md  hw4.cabal
practice1/: README.md
practice1/app/: Main.hs
practice2/: practice2.cabal
practice2/app/: Practise.hs
practice3/: README.md  practice3.cabal
practice3/app/: Main.hs
practice3/src/: Practise.hs
timeDir/: EatFile.txt
timeDir/BigHouse/flat1/: Flat.txt
