name:                hw1-second-chance
version:             0.1.0.0
synopsis:            Synopsis for task 1-adding
description:         Task 1-adding for FP ITMO course

homepage:            https://github.com/niki999922/fp-homework/tree/master/hw1-second-chance#readme
license:             MIT
license-file:        LICENSE
author:              Nikita Kochetkov
maintainer:          niki999922@yandex.ru
copyright:           2020 Nikita Kochetkov

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Block6
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5, mtl
  default-language:    Haskell2010

test-suite HW1-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hw1-second-chance
                     , hspec
                     , QuickCheck
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Block6Tests
  default-language:    Haskell2010
  build-tool-depends:  hspec-discover:hspec-discover