    name:                hw2
version:             0.1.0.0
synopsis:            Synopsis for task 2
description:         Task 2 for FP ITMO course

homepage:            https://github.com/niki999922/fp-homework/tree/master/hw2#readme
license:             MIT
license-file:        LICENSE
author:              Nikita
maintainer:          niki999922@yandex.ru
copyright:           2020 Nikita

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     File, Directory, Main, WorkingEnvironment, Parser
  -- ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5, mtl, transformers, directory, time, filepath, optparse-applicative, text, split, sort
  default-language:    Haskell2010