name:                practice3
version:             0.1.0.0
synopsis:            Template for task 3
description:         Practice 3 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/practice3#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

executable practice3
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , practice3
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     Practise
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5, aeson, text, bytestring
  default-language:    Haskell2010